WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194647
AX: ARIA Reflection was disabled in error
https://bugs.webkit.org/show_bug.cgi?id=194647
Summary
AX: ARIA Reflection was disabled in error
James Craig
Reported
2019-02-14 01:32:17 PST
AX: ARIA Reflection was disabled in error
r236522
from
bug 151380
disabled the ARIAReflectionEnabled flag, presumably in error.
https://bugs.webkit.org/show_bug.cgi?id=151380#c18
The automated tests did not catch the fault because the test runner overrides the flag: ~src/WebKit/Tools/WebKitTestRunner/TestController.cpp: 827: WKPreferencesSetAriaReflectionEnabled(preferences, true); So the fix may be to revert the AriaReflectionEnabled value in WebPreferences.yaml and remove the test override.
Attachments
patch
(1.06 KB, patch)
2019-02-14 01:40 PST
,
chris fleizach
rniwa
: review+
Details
Formatted Diff
Diff
Landing patch
(2.36 KB, patch)
2019-02-14 08:05 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Craig
Comment 1
2019-02-14 01:37:46 PST
<
rdar://problem/48068336
>
chris fleizach
Comment 2
2019-02-14 01:40:20 PST
Created
attachment 362005
[details]
patch
James Craig
Comment 3
2019-02-14 01:49:03 PST
Comment on
attachment 362005
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362005&action=review
> Source/WebKit/Shared/WebPreferences.yaml:1438 > + defaultValue: true
Should this patch pull the test override out too? ~src/WebKit/Tools/WebKitTestRunner/TestController.cpp: 827: WKPreferencesSetAriaReflectionEnabled(preferences, true);
chris fleizach
Comment 4
2019-02-14 01:49:42 PST
Comment on
attachment 362005
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362005&action=review
>> Source/WebKit/Shared/WebPreferences.yaml:1438 >> + defaultValue: true > > Should this patch pull the test override out too? > > ~src/WebKit/Tools/WebKitTestRunner/TestController.cpp: > 827: WKPreferencesSetAriaReflectionEnabled(preferences, true);
will wait for Ryosuke to weigh in on that
Ryosuke Niwa
Comment 5
2019-02-14 02:30:04 PST
Comment on
attachment 362005
[details]
patch We probably should remove the override in the test runner as well
chris fleizach
Comment 6
2019-02-14 08:05:45 PST
Created
attachment 362016
[details]
Landing patch
WebKit Commit Bot
Comment 7
2019-02-14 09:27:25 PST
Comment on
attachment 362016
[details]
Landing patch Clearing flags on attachment: 362016 Committed
r241549
: <
https://trac.webkit.org/changeset/241549
>
WebKit Commit Bot
Comment 8
2019-02-14 09:27:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug