Cherry-pick r241549. rdar://problem/48243406

AX: ARIA Reflection was disabled in error
    https://bugs.webkit.org/show_bug.cgi?id=194647
    <rdar://problem/48068336>

    Reviewed by Ryosuke Niwa.

    Source/WebKit:

    * Shared/WebPreferences.yaml:

    Tools:

    Remove test override now that this feature should be enabled by default.

    * WebKitTestRunner/TestController.cpp:
    (WTR::TestController::resetPreferencesToConsistentValues):

    Canonical link: https://commits.webkit.org/209053@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241549 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.294@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@241880 268f45cc-cd09-0410-ab3c-d52691b4dbfc